# zweek-code

./: .gitignore  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md
include/chat/: chat_mode.hpp
include/coder/: tiny_coder.hpp
include/commands/: command_handler.hpp
include/history/: history_manager.hpp  sqlite3_wrapper.h
include/models/: model_loader.hpp
include/pipeline/: orchestrator.hpp
include/tools/: tool_executor.hpp
include/ui/: tui.hpp
models/: README.md
src/: main.cpp
src/chat/: chat_mode.cpp
src/coder/: tiny_coder.cpp
src/commands/: command_handler.cpp
src/history/: history_manager.cpp
src/models/: model_loader.cpp
src/pipeline/: orchestrator.cpp  router.cpp
src/tools/: tool_executor.cpp
src/ui/: tui.cpp
tests/: test_tool_executor.cpp
